--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 	  </li>
 	</ul>
       </div>
-      <div style="display: inline-block;padding: 20 10 20 10;background: #fff;width:813px;">
+      <div style="display: inline-block;padding: 20 10 20 10;background: #fff;width:820px;">
 	<div style="float: left;">
 	  <div style="float: left;">
 	    <img src="images/image6.png" style="width: 150px;">
@@ -218,31 +218,31 @@
   </td>
 </tr>
 <tr>
-  <td colspan="3" style="background: #F0F0F0;">
-    <div style="width:900px; ">
+  <td style="background: #F0F0F0;" colspan="3">
+    <div style="width:900px;display: inline-block; padding-bottom: 30">
       <div style="float:left;width:300px; ">
-	<div style="margin: 0 auto; width: 250px">
-	  <img src="images/image7.png" style="width: 250px">
+	<div style="margin: 0 auto; width: 240px">
+	  <img src="images/image7.png" style="width: 240px">
 	</div>
-	<div style="margin: 0 auto; width: 250px">
+	<div style="margin: 0 auto; width: 240px">
 	  <div>Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id.</div>
 	  <div>Espectaculo</div>
 	</div>
       </div>
       <div style="float:left;width:300px; ">
-	<div style="margin: 0 auto; width: 250px">
-	  <img src="images/image7.png" style="width: 250px">
+	<div style="margin: 0 auto; width: 240px">
+	  <img src="images/image7.png" style="width: 240px">
 	</div>
-	<div style="margin: 0 auto; width: 250px">
+	<div style="margin: 0 auto; width: 240px">
 	  <div>Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id.</div>
 	  <div>Espectaculo</div>
 	</div>
       </div>
       <div style="float:left;width:300px; ">
-	<div style="margin: 0 auto; width: 250px">
-	  <img src="images/image7.png" style="width: 250px">
+	<div style="margin: 0 auto; width: 240px">
+	  <img src="images/image7.png" style="width: 240px">
 	</div>
-	<div style="margin: 0 auto; width: 250px">
+	<div style="margin: 0 auto; width: 240px">
 	  <div>Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id.</div>
 	  <div>Espectaculo</div>
 	</div>
